--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -22,10 +22,18 @@
   </div>
 </div>
 
+<div class="return">
+  <a href="index.html">← Return</a>
+</div>
+
 <div class="main">
-  <img src="luohan.jpg" alt="Luohan Chen">
+  <img src="images/backshot.png" alt="Luohan Chen">
   <div class="abtDescription">
-  <h2>Luohan Chen is a multidiscplinary designer. </h2></div>
+  <h2>I’m a multidisciplinary designer crafting work that blends 2D, 3D, sound and web design. <br>
+    <br>My experience is rooted in experimentation and driven by a passion for storytelling across mediums. <br><br>I love creating engaging immersive experiences that invites participation and conversation.
+  </h2>
+  <a href="images/LuohanResume.pdf" download>Resume</a>
+</div>
 </div>
 
 
@@ -33,7 +41,7 @@
 
         <div class="ft footer-animate">
       <p>Like what you see?</p>
-      <Button>Work with me!</Button>
+      <a href="mailto:chenlh2000@hotmail.com">Work with me!</a>
     </div>
 
 </div>
@@ -44,11 +52,10 @@
     </div>
 
     <div class="fr footer-animate">
-    <a href="instagram.com">INSTAGRAM</a>
-    <a href="linkedin.com">LINKEDIN</a>
+    <a href="https://www.instagram.com/cya_dia/">INSTAGRAM</a>
+    <a href="https://www.linkedin.com/in/luohan-chen-636088187/">LINKEDIN</a>
     </div>
   </div>
-  </div>
 
-  </body>
+</body>
 </html>
