--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,78 +34,100 @@
 </div>
 
   <div class="gallery" id="gallery">
+    <a href="proj_daw.html">
     <div class="image-card">
     <img src="images/daw_full.png" id="web" alt="Drawable Audio Webstation" draggable="false" loading="lazy">
     <p class="category">WEB / INTERACTIVE</p>
     <p class="caption">DRAWABLE AUDIO WEBSTATION</p>
     </div>
+    </a>
 
+    <a href="proj_lucky.html">
     <div class="image-card">
     <img src="images/luckycards.jpg" id="web" alt="Very Lucky Cards" draggable="false" loading="lazy">
         <p class="category">WEB / INTERACTIVE</p>
         <p class="caption">VERY LUCKY CARDS</p>
     </div>
+    </a>
 
+    <a href="proj_imaginarium.html">
     <div class="image-card">
     <img src="images/ImaginariumFull.jpg" id="web" alt="The Imaginarium" draggable="false" loading="lazy">
         <p class="category">WEB / EXPERIENCE</p>
         <p class="caption">THE IMAGINARIUM</p>
     </div>
+    </a>
 
+        <a href="proj_struggle.html">
     <div class="image-card">
     <img src="images/struggle.jpg" id="web" alt="The Struggle" draggable="false" loading="lazy">
         <p class="category">INTERACTIVE</p>
         <p class="caption">THE STRUGGLE</p>
     </div>
+    </a>
 
+        <a href="proj_amf.html">
     <div class="image-card">
     <img src="images/amf.jpg" id="graphic" alt="AMAA X FORTRESS Artist Alley" draggable="false" loading="lazy">
         <p class="category">MOTION GRAPHIC / EXPERIENCE</p>
         <p class="caption">AMAA X FORTRESS ARTIST ALLEY</p>
     </div>
+    </a>
 
+        <a href="proj_gamestall.html">
     <div class="image-card">
     <img src="images/gamestall.jpg" id="graphic" alt="Night Market Game Stall" draggable="false" loading="lazy">
         <p class="category">3D</p>
         <p class="caption">NIGHT MARKET GAME STALL</p>
     </div>
+    </a>
 
+        <a href="proj_baddy.html">
     <div class="image-card">
     <img src="images/rbc.png" id="graphic" alt="RMIT Badminton Club" draggable="false" loading="lazy">
         <p class="category">GRAPHIC / SOCIAL MEDIA</p>
         <p class="caption">RMIT BADMINTON CLUB</p>
     </div>
+    </a>
 
+    <a href="proj_aby.html">
     <div class="image-card">
     <img src="images/abyshoot.jpg" id="graphic" alt="Fashion Photoshoot" draggable="false" loading="lazy">
         <p class="category">PHOTOGRAPHY</p>
         <p class="caption">FASHION PHOTOSHOOT</p>
     </div>
+    </a>
 
+    <a href="proj_stellar.html">
     <div class="image-card">
     <img src="images/stellar.jpg" id="graphic" alt="Stellar Stellar" draggable="false" loading="lazy">
         <p class="category">MOGRAPH</p>
         <p class="caption">STELLAR STELLAR</p>
     </div>
+    </a>
 
+    <a href="proj_dapurama.html">
     <div class="image-card">
     <img src="images/Dapurama.jpg" id="sound" alt="Dapur Ama" draggable="false" loading="lazy">
         <p class="category">SOUND DESIGN</p>
         <p class="caption">DAPUR AMA</p>
     </div>
+    </a>
 
+    <a href="proj_shush.html">
     <div class="image-card">
     <img src="images/shush.jpg" id="sound" alt="Shush" draggable="false" loading="lazy">
         <p class="category">SOUND DESIGN</p>
         <p class="caption">SHUSH</p>
     </div>
+    </a>
   </div>
 
 <div class="footer1">
 
         <div class="ft footer-animate">
       <p>Like what you see?</p>
-      <Button>Work with me!</Button>
+      <a href="mailto:chenlh2000@hotmail.com">Work with me!</a>
     </div>
 
 </div>
@@ -116,10 +138,9 @@
     </div>
 
     <div class="fr footer-animate">
-    <a href="instagram.com">INSTAGRAM</a>
-    <a href="linkedin.com">LINKEDIN</a>
+    <a href="https://www.instagram.com/cya_dia/">INSTAGRAM</a>
+    <a href="https://www.linkedin.com/in/luohan-chen-636088187/">LINKEDIN</a>
     </div>
-  </div>
   </div>
 
 </body>
