--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -22,12 +22,23 @@
   </div>
 </div>
 
+<div class="return">
+  <a href="index.html">← Return</a>
+</div>
+
+<div class="main2">
+<h1>Contact me:</h1>
+    <a href="mailto:chenlh2000@hotmail.com">Email</a>
+    <a href="https://www.instagram.com/cya_dia/">Instagram</a>
+    <a href="https://www.linkedin.com/in/luohan-chen-636088187/">Linkedin</a>
+  <a href="images/LuohanResume.pdf" download>Resume</a>
+</div>
 
 <div class="footer1">
 
         <div class="ft footer-animate">
       <p>Like what you see?</p>
-      <Button>Work with me!</Button>
+      <a href="mailto:chenlh2000@hotmail.com">Work with me!</a>
     </div>
 
 </div>
@@ -38,8 +49,8 @@
     </div>
 
     <div class="fr footer-animate">
-    <a href="instagram.com">INSTAGRAM</a>
-    <a href="linkedin.com">LINKEDIN</a>
+    <a href="https://www.instagram.com/cya_dia/">INSTAGRAM</a>
+    <a href="https://www.linkedin.com/in/luohan-chen-636088187/">LINKEDIN</a>
     </div>
   </div>
   </div>
