--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,10 +30,21 @@
         <button id="web">Interaction Designer</button>
         <button id="graphic">Visual Designer</button>
         <button class="sd" id="sound">Sound Designer</button>
+        <button id="magic">Magic Maker</button>
   </div>
 </div>
 
   <div class="gallery" id="gallery">
+
+        <a href="proj_imaginarium.html">
+      <div class="image-card" data-categories="web magic">
+        <img src="images/ImaginariumFull.jpg" id="web" alt="The Imaginarium" draggable="false" loading="lazy">
+        <p class="category">WEB / EXPERIENCE</p>
+        <p class="caption">THE IMAGINARIUM</p>
+      </div>
+    </a>
+
+    
     <a href="proj_daw.html">
     <div class="image-card">
     <img src="images/daw_full.png" id="web" alt="Drawable Audio Webstation" draggable="false" loading="lazy">
@@ -50,16 +61,8 @@
     </div>
     </a>
 
-    <a href="proj_imaginarium.html">
-    <div class="image-card">
-    <img src="images/ImaginariumFull.jpg" id="web" alt="The Imaginarium" draggable="false" loading="lazy">
-        <p class="category">WEB / EXPERIENCE</p>
-        <p class="caption">THE IMAGINARIUM</p>
-    </div>
-    </a>
-
         <a href="proj_struggle.html">
-    <div class="image-card">
+    <div class="image-card" data-categories="web magic">
     <img src="images/struggle.jpg" id="web" alt="The Struggle" draggable="false" loading="lazy">
         <p class="category">INTERACTIVE</p>
         <p class="caption">THE STRUGGLE</p>
@@ -67,7 +70,7 @@
     </a>
 
         <a href="proj_amf.html">
-    <div class="image-card">
+    <div class="image-card" data-categories="graphic magic">
     <img src="images/amf.jpg" id="graphic" alt="AMAA X FORTRESS Artist Alley" draggable="false" loading="lazy">
         <p class="category">MOTION GRAPHIC / EXPERIENCE</p>
         <p class="caption">AMAA X FORTRESS ARTIST ALLEY</p>
@@ -75,7 +78,7 @@
     </a>
 
         <a href="proj_gamestall.html">
-    <div class="image-card">
+    <div class="image-card" data-categories="graphic magic">
     <img src="images/gamestall.jpg" id="graphic" alt="Night Market Game Stall" draggable="false" loading="lazy">
         <p class="category">3D</p>
         <p class="caption">NIGHT MARKET GAME STALL</p>
@@ -107,7 +110,7 @@
     </a>
 
     <a href="proj_dapurama.html">
-    <div class="image-card">
+    <div class="image-card" data-categories="sound magic">
     <img src="images/Dapurama.jpg" id="sound" alt="Dapur Ama" draggable="false" loading="lazy">
         <p class="category">SOUND DESIGN</p>
         <p class="caption">DAPUR AMA</p>
