--- a/trinkets/index.html
+++ b/trinkets/index.html
@@ -10,10 +10,10 @@
 <body>
     
     <div class="headerpic">
-    <img class="img1" src="image/tk1.png" alt="Trinket Image 1">
-<img class="img2" src="image/tk2.png" alt="Trinket Image 1">
-<img class="img1" src="image/tk3.png" alt="Trinket Image 1">
-<img class="img1" src="image/tk4.png" alt="Trinket Image 1">
+<img class="img1" src="image/tk4.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
+<img class="img4" src="image/tk1.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
+<img class="img3" src="image/tk2.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
+<img class="img2" src="image/tk3.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
     </div>
 
 </body>
