--- a/trinkets/index.html
+++ b/trinkets/index.html
@@ -10,11 +10,16 @@
 <body>
     
     <div class="headerpic">
-<img class="img1" src="image/tk4.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
-<img class="img4" src="image/tk1.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
-<img class="img3" src="image/tk2.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
-<img class="img2" src="image/tk3.png" style="width:1300px; height:auto;" alt="Trinket Image 1">
+<img src="image/trinketsHeader.png">
     </div>
 
+    <div class="info">
+    <h1>Trinkets</h1>
+
+    <button class="story">The Trinkets Story</button>
+    <button class="skip">Go to Experience</button>
+    </div>
+
+    
 </body>
 </html>
