--- a/trinkets/index.html
+++ b/trinkets/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Trinkets</title>
 </head>
 <body>
     
-    <div class="headerpic">
-<img src="image/trinketsHeader.png">
+    <div class="hero">
+<img src="image/feature (1).JPG">
     </div>
 
     <div class="info">
     <h1>Trinkets</h1>
+    <h3>The stories we carry.</h3>
 
     <button class="story">The Trinkets Story</button>
     <button class="skip">Go to Experience</button>
