--- a/trinkets/index.html
+++ b/trinkets/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <title>Trinkets</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css"/>
+  <script src="script.js" defer></script>
+  <title>Trinkets</title>
 </head>
 <body>
-    
-    <div class="hero">
-<img src="image/feature (1).JPG">
-    </div>
+  <main>
 
-    <div class="info">
-    <h1>Trinkets</h1>
-    <h3>The stories we carry.</h3>
+    <section class="hero scatter" id="hero" aria-label="Featured Trinkets">
+      <img src="image/feature1square.jpg" alt="Trinket 1">
+      <img src="image/feature2square.jpg" alt="Trinket 2">
+      <img src="image/feature3square.jpg" alt="Trinket 3">
+      <img src="image/feature4square.jpg" alt="Trinket 4">
+      <img src="image/feature5square.jpg" alt="Trinket 5">
+      <img src="image/feature6square.jpg" alt="Trinket 6">
+      <img src="image/feature7square.jpg" alt="Trinket 7">
+      <img src="image/feature8square.jpg" alt="Trinket 8">
+      <img src="image/feature9square.jpg" alt="Trinket 9">
+    </section>
 
-    <button class="story">The Trinkets Story</button>
-    <button class="skip">Go to Experience</button>
-    </div>
 
-    
+    <section class="info">
+      <h1>Trinkets</h1>
+      <div class="cta-row">
+        <h3>The stories we carry everyday.</h3>
+        <button class="story">The Trinkets Story</button>
+        <button class="skip">My Trinket</button>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
