--- a/trinkets/public/street.html
+++ b/trinkets/public/street.html
@@ -8,24 +8,58 @@
   <link rel="stylesheet" href="street.css">
 </head>
 <body>
-  <header class="topbar">
-    <h1>Trinket Street</h1>
-    <a class="btn" href="/">Make another</a>
-  </header>
+<canvas id="bg3d"></canvas>
+  <script type="module" src="street-float.js"></script>
+<script type="module">
+  import * as THREE from "https://esm.sh/three@0.160.0";
+  import { GLTFLoader } from "https://esm.sh/three@0.160.0/examples/jsm/loaders/GLTFLoader.js";
 
-  <main class="gallery" id="gallery" aria-live="polite"></main>
+  const scene = new THREE.Scene();
+  scene.background = new THREE.Color(0x9fc4da);
 
-  <template id="card-tpl">
-    <article class="card">
-      <img class="shot" alt="Trinket drawing"/>
-      <div class="meta">
-        <h3 class="name"></h3>
-        <p class="story"></p>
-        <time class="time"></time>
-      </div>
-    </article>
-  </template>
+  const camera = new THREE.PerspectiveCamera(
+    60,
+    window.innerWidth / window.innerHeight,
+    0.1,
+    1000
+  );
 
-  <script src="street.js" defer></script>
+  // 👇 Set the exact position of the camera
+  camera.position.set(0, 1, 25);  // x, y, z
+  camera.lookAt(0, 5, 0);        // point the camera at your model
+
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  // Load GLB model
+  const loader = new GLTFLoader();
+  loader.load(
+    "assets/street.glb",
+    (gltf) => {
+      scene.add(gltf.scene);
+    },
+    undefined,
+    (err) => console.error("Error loading street.glb:", err)
+  );
+
+  // Lights
+  const hemi = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+  scene.add(hemi);
+
+  // Animate loop
+  function animate() {
+    requestAnimationFrame(animate);
+    renderer.render(scene, camera);
+  }
+  animate();
+
+  // Resize handling
+  window.addEventListener("resize", () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
+</script>
 </body>
 </html>
