--- a/trinkets/public/index.html
+++ b/trinkets/public/index.html
@@ -40,7 +40,7 @@
       <h1 id="finalPrompt" class="start-title hidden">What’s your story?</h1>
 
       <button id="startBtn" class="start-btn" type="button" aria-label="Start">Start</button>
-      <p class="start-hint">Press Enter or Space</p>
+      <p class="start-hint">Press anything, anywhere else to skip.</p>
     </div>
   </section>
 
@@ -78,11 +78,6 @@
           <label class="field">
             <span>What is your Trinket's Name?</span>
             <input id="trinketName" type="text" placeholder="Enter a name..." />
-          </label>
-
-          <label class="field">
-            <span>What is your Trinket's Story?</span>
-            <textarea id="trinketText" rows="8" placeholder="Write your story..."></textarea>
           </label>
 
           <button id="submitTrinket" type="button" class="submit-btn">Submit</button>
